# mikage-dev

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Doxyfile  README.md  conanfile.py
.github/workflows/: ubuntu.yml  windows-build.yml
.gitlab/: build.yml
data/nand_archives/: CMakeLists.txt
data/nand_archives/0004009b/00010202/content/: 00000000.app
data/nand_archives/0004009b/00010402/content/: 00000000.app
data/nand_archives/0004009b/00014002/content/: 00000000.app
data/nand_archives/000400db/00010302/content/: 00000000.app
data/nand_archives/000400db/00016102/content/: 00000000.app
source/: CMakeLists.txt  arm.h  bit_field.h  debug_server.cpp  debug_server.hpp  display.cpp  display.hpp  gdb_stub.cpp  gdb_stub.h  input.cpp  input.hpp  interpreter.cpp  interpreter.h  ipc.cpp  ipc.hpp  memory.cpp  memory.h  os.cpp  os.hpp  os_console.cpp  os_console.hpp  os_hypervisor.cpp  os_hypervisor.hpp  os_hypervisor_private.hpp  os_serialization.cpp  os_serialization.hpp  os_types.hpp  pica.cpp  pica.hpp  session.cpp  session.hpp  settings.cpp
source/arm/: arm_meta.hpp  processor_default.cpp  processor_default.hpp  processor_interpreter.hpp  thumb.cpp  thumb.hpp
source/debug/: jit.cpp  jit.hpp  os.cpp  os.hpp
source/framework/: CMakeLists.txt  bit_field_new.hpp  color.hpp  config_framework.hpp  console.cpp  console.hpp  exceptions.cpp  exceptions.hpp  formats.hpp  formats_impl.hpp  image_format.hpp  logging.hpp  math_vec.hpp  meta_tools.hpp  profiler.cpp  profiler.hpp  ranges.hpp  settings.hpp
source/framework/tests/: bit_field.cpp  config.cpp
source/gui-sdl/: audio_frontend_sdl.hpp  main.cpp  sdl_vulkan_display.hpp
source/hardware/: dsp.cpp  dsp.hpp
source/loader/: firm.cpp  firm.hpp  gamecard.cpp  gamecard.hpp  gamecard_constants.hpp  host_file.cpp  host_file.hpp
source/platform/: CMakeLists.txt  am.hpp  cdc.hpp  config.hpp  crypto.hpp  csnd.hpp  dsp.hpp  fs.hpp  gpio.hpp  gsp.hpp  hid.hpp  i2c.hpp  ipc.hpp  mcu.hpp  ns.hpp  pxi.hpp  sm.hpp
source/platform/file_formats/: 3dsx.hpp  bcfnt.hpp  cia.hpp  dsp1.hpp  formats.cpp  ncch.hpp  smdh.hpp
source/platform/gpu/: float.hpp  pica.hpp  zorder.hpp
source/processes/: act.cpp  act.hpp  am.cpp  am.hpp  am_hpv.cpp  am_hpv.hpp  cam.cpp  cam.hpp  cdc.cpp  cdc.hpp  cecd.cpp  cecd.hpp  cfg_hpv.cpp  cfg_hpv.hpp  csnd.cpp  csnd.hpp  dlp.cpp  dlp.hpp  dsp.cpp  dsp.hpp  dsp_hpv.cpp  dsp_hpv.hpp  dummy.cpp  dummy.hpp  errdisp.cpp  errdisp.hpp  fake_process.cpp  fake_process.hpp  friend.cpp  friend.hpp  fs.cpp  fs.hpp  fs_common.cpp  fs_common.hpp  fs_hpv.cpp  fs_hpv.hpp  fs_paths.hpp  gpio.cpp  gpio.hpp  hid.cpp  (+37 more)
source/ui/: audio_frontend.hpp  installer.cpp  key_database.cpp  key_database.hpp
source/utility/: simple_tcp.cpp  simple_tcp.hpp  unique_resource.hpp
source/video_core/: CMakeLists.txt
source/video_core/src/: interrupt_listener.hpp
source/video_core/src/core/hw/: gpu.cpp  gpu.h
source/video_core/src/debug/: gpu.cpp  gpu.hpp
source/video_core/src/support/common/: bit_field.h  common_funcs.h  common_types.h  log.h
source/video_core/src/video_core/: clipper.cpp  clipper.h  command_processor.cpp  command_processor.h  context.cpp  context.h  primitive_assembly.cpp  primitive_assembly.h  rasterizer.cpp  rasterizer.h  renderer.hpp  shader.cpp  shader.hpp  shader_analysis.cpp  shader_analysis.hpp  shader_disassembler.cpp  shader_glsl.cpp  shader_interpreter.cpp  shader_microcode.cpp  shader_microcode.hpp  shader_microcode_handlers.hpp  shader_private.hpp  vertex_loader.hpp
source/video_core/src/video_core/debug_utils/: debug_utils.cpp  debug_utils.h
source/video_core/src/video_core/vulkan/: awaitable.hpp  layout_transitions.hpp  pipeline_cache.cpp  pipeline_cache.hpp  renderer.cpp  renderer.hpp  resource_manager.cpp  resource_manager.hpp  shader_gen.cpp  shader_gen.hpp  state_mapping.hpp
source/video_core/utils/vulkan_utils/: CMakeLists.txt  debug_markers.hpp  device_manager.cpp  device_manager.hpp  glsl_helper.cpp  glsl_helper.hpp  glslang_resource_limits.cpp  memory_types.cpp  memory_types.hpp
tools/3dsx_to_cia/: CMakeLists.txt  main.cpp
tools/embed_title/: CMakeLists.txt  Readme.md  main.cpp
tools/install_cia/: CMakeLists.txt  main.cpp
